8194309: JNI handle allocation failure not reported correctly

Reviewed-by: kbarrett, coleenp